--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 pokerdev/
 *.db
 start-poker.sh
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+poker-env/
+.env
+output.log
+.pytest_cache/
+.coverage
